# trade-api-project

./: .dockerignore  .gitignore  Dockerfile  README.md  ai_service.py  data_scraper.py  main.py  pyproject.toml  requirements.txt  security.py  test_main.py
