[project]
name = "trade-api-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.11.4",
    "fastapi>=0.135.1",
    "google-genai>=1.67.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.42.0",
]
